--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codeconnect",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
