--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "codeconnect",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
